# Dan_Portfolio_Code

./: .gitignore  README.md  data.json
SWIFT/: mt103.py  (+3 more)
pyspark-transactions/: .gitignore  .pylintrc  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
pyspark-transactions/ci-reports/: coverage.xml
pyspark-transactions/config/: parameters.yaml
pyspark-transactions/config/asia_pacific_1/: parameters.yaml
pyspark-transactions/config/europe_3/: parameters.yaml
pyspark-transactions/config/north_america_2/: parameters.yaml
pyspark-transactions/contracts_to_transactions/: config.py  gx_validation.py  main.py  validate.py
pyspark-transactions/dags/: e3_pipeline_dag.py  pipeline_dag.py
pyspark-transactions/data/: claims.csv  contracts.csv
pyspark-transactions/data/asia_pacific_1/: claims.csv  contracts.csv
pyspark-transactions/data/europe_3/: claims.csv
pyspark-transactions/data/north_america_2/: claims.csv  contracts.csv
pyspark-transactions/e3_contracts_to_transactions/: api.py  config.py  io_utils.py  main.py  schemas.py  transform.py  validate.py
pyspark-transactions/jobs/: e3_pipeline.py  pipeline.py
pyspark-transactions/output/: TRANSACTIONS.csv  sample_TRANSACTIONS.csv  sample_TRANSACTIONS_asia_pacific_1.csv  sample_TRANSACTIONS_europe_3.csv  sample_TRANSACTIONS_north_america_2.csv
pyspark-transactions/output/asia_pacific_1/: TRANSACTIONS.csv
pyspark-transactions/output/europe_3/: TRANSACTIONS.csv
pyspark-transactions/tests/: conftest.py  test_api.py  test_config.py  test_io_utils.py  test_main.py  test_transform.py
(+176 files in other folders)
