[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "contracts-to-transactions"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pyspark>=4.0.0,<4.2.0",
    "requests>=2.31",
    "pyyaml>=6.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["contracts_to_transactions*"]

[tool.coverage.run]
source = ["contracts_to_transactions"]
relative_files = true

[tool.coverage.report]
show_missing = true
